--- a/app/css/main.css
+++ b/app/css/main.css
@@ -613,12 +613,12 @@ em {
       text-decoration: none; }
 
 .about-content {
-  margin-left: 2rem; }
+  margin-left: 5rem; }
   .about-content h2 {
-    margin-top: 1.3em;
-    margin-bottom: 0.3em; }
+    margin-top: 1.5em;
+    margin-bottom: 1em; }
     .about-content h2:first-child {
-      margin-top: 0; }
+      margin-top: 0.5em; }
   .about-content p {
     margin-top: 0; }
 
