--- a/app/css/main.css
+++ b/app/css/main.css
@@ -3,7 +3,7 @@
   height: 100vh;
   width: 100%;
   position: fixed;
-  display: none;
+  display: flex;
   -webkit-box-align: center;
   -webkit-align-items: center;
       -ms-flex-align: center;
