--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1,11 +1,5 @@
 @import 'typography'
 
-body
-  background-color: #ffffff
-
-*::selection
-  color: #fff
-
 *
   box-sizing: border-box
 
@@ -14,7 +8,9 @@ body
   margin: 0 auto
   padding: 0 2rem
 
-@import 'content'
+.container
+  margin-top: 5rem
+
 
 
 
