--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1,15 +1,31 @@
 @import 'typography'
+@import '../../node_modules/node-normalize-scss/_normalize.scss'
 
 *
   box-sizing: border-box
 
 .container
-  max-width: 600px
+  max-width: 800px
   margin: 0 auto
   padding: 0 2rem
 
 .container
   margin-top: 5rem
+
+.about 
+  display: flex 
+
+  .text
+    margin-left: 33px
+
+  h1
+    margin-top: 0px
+
+  img
+    max-width: 333px
+
+.socials 
+  margin-top: 7.77px
 
 
 
