--- a/app/sass/_typography.sass
+++ b/app/sass/_typography.sass
@@ -1,4 +1,20 @@
 html
   font-family: 'Source Code Pro', sans-serif
+  font-size: 10px
+
+
+body 
+  font-size: 1.6rem
+
+
+@media screen and ( max-width: 991px )
+  html
+    font-size: 9px
+
+
+  
+@media screen and ( max-width: 768px )
+  html
+    font-size: 8px
 
 
